--- a/www/index.html
+++ b/www/index.html
@@ -32,15 +32,18 @@
                 </form>
           </div>
       </div>
-    </main>            
-      
+    </main>
+    <main class="spash" id="splash" style="width: 100vw;height: 100vh;z-index: 1000;display: none">
+        <span>SPLASH</span>
+    </main>
     <main class="index-page">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
             <a class="navbar-brand" href="#">Delivery Zone</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+            <button id="sync" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
+                <span id="worked-cnt" style="display: none">3</span>
+                <i class="material-icons">cached</i>
             </button>
-            <div class="navbar-collapse collapse" id="navbarNav" style="">
+<!--            <div class="navbar-collapse collapse" id="navbarNav" style="">
               <ul class="navbar-nav">
                 <li class="nav-item">
                   <a class="nav-link"href="#operations" id="top_op" href="#">Operation</a>
@@ -52,7 +55,7 @@
                   <a class="nav-link" href="#" id="download" >Download</a>
                 </li>
               </ul>
-            </div>
+            </div>-->
         </nav>
 
         <section class="section section-basic" id="operations">
@@ -103,9 +106,9 @@
                 </div>
             </div>    
         </section>
-        <section class="section section-full-screen page" id="execute" style="display: none">
-            <div class="picking">
-                <div class="jumbotron jumbotron-fluid text-center bg-primary text-white" t-log="picking">
+        <section class="section section-full-screen page" id="execute" style="display: none" t-log="this">
+            <div class="picking" t-log="picking">
+                <div class="jumbotron jumbotron-fluid text-center bg-primary text-white" >
                     <div class="container">
                         <h1 class="display-3"><t t-esc="picking.get_name()"/></h1>
                         <p class="lead">
@@ -122,7 +125,8 @@
                     </div>
                 </div>
                     <div class="pack container">
-                        <div t-foreach="picking.get('pack_operation_ids')"  t-as="op" t-att-class="'card border-primary mt-3 mb-3 operation ' + op.product.tracking" 
+                        <div t-foreach="picking.get('pack_operation_ids')"  t-as="op" 
+                             t-att-class="'card border-primary mt-3 mb-3 operation ' + op.product.tracking " 
                              t-att-data-id="op.id"
                              t-att-data-ordered_qty="op.ordered_qty"
                              t-att-data-product_id="op.product.id"                     
@@ -200,7 +204,7 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script type="text/javascript" src="cordova.js"></script>
+<!--    <script type="text/javascript" src="cordova.js"></script>-->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <!-- Then Material JavaScript on top of Bootstrap JavaScript -->
@@ -214,7 +218,7 @@
         $().ready(function(){
             var app = new App('stock');            
             var click_cnt = 0;            
-            $('#loginform img').dblclick(function(){
+            $('#loginform img').click(function(){
                 click_cnt +=1;
                 if (click_cnt < 5) return;
                 prompt("Enter Server URL").then(function(url){
@@ -223,7 +227,8 @@
                         url = new URL(url);
                         SERVER_URL = url.origin;
                     }catch(e){
-                        $('#loginform img').dblclick();
+                        alert("Wrong Url Format");
+                        $('#loginform img').click();
                     }
                 });
             });
