stock scan v1.0.1-RC2

--- a/www/index.html
+++ b/www/index.html
@@ -118,7 +118,7 @@
             <div class="picking" t-log="picking">
                 <div class="jumbotron jumbotron-fluid text-center bg-primary text-white" >
                     <div class="container">
-                        <h1 class="display-3"><t t-esc="picking.get_name()"/></h1>
+<!--                        <h1 class="display-3"><t t-esc="picking.get_name()"/></h1>-->
                         <p class="lead">
                           <span class="source"><t t-esc="picking.get_source()"/></span>
                           <span class="dest"><t t-esc="picking.get_destination()"/></span>
