--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
           </div>
       </div>
     </main>
-    <main class="splash" id="splash" style="width: 100vw;height: 100vh;z-index: 1000;">
+    <main class="splash" id="splash" style="width: 100vw;height: 100vh;z-index: 1000;display:none;">
         <div class="group"> 
             <div class="bigSqr">
               <div class="square first"></div>
